--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
                                             <li data-menuanchor="hero" class="list-group-item"><a href="#hero">Home</a></li>
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="Resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
-                                            <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li> -->
+                                            <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li>
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
+                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
@@ -137,13 +136,12 @@
                                             <li class="list-group-item"><span>Follow me :</span></li>
                                             <li class="list-group-item">
                                                 <ul class="list-inline socails">
-                                                        <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"><span class="base-color"></span></span></i></a></li>
-                                                        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube text-dark"></i></i></a></li> 
-                                                        <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
+                                                        <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original ><span class="base-color"></span></span></i></a></li>
+                                                        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></i></a></li> 
+                                                        <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled"></i></a></li>
                                                         <!-- <li class="list-inline-item"><a href="javascript:void(0);">
                                                             <i class="lni-github-original text-dark"></i></a></li> -->
-                                                        
-                                                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>   
+                                                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original"></i></a></li>   
                                                 <!-- <li class="list-inline-item"><a href="#"><i class="lni-facebook-filled"></i></a></li>
                                                 <li class="list-inline-item"><a href="#"><i class="lni-twitter-filled"></i></a></li>
                                                 <li class="list-inline-item"><a href="#"><i class="lni-github-original"></i></a></li>
@@ -175,7 +173,7 @@
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying </span></p>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">air sea physics & remote sensing with a B.S. in Meteorology  </span></p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">air sea physics & remote sensing with a B.S. in Meteorology </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
