--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="Resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
                                             <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li>
-                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
+                                            <!--<li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
+                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>-->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
@@ -136,8 +136,8 @@
                                             <li class="list-group-item"><span>Follow me :</span></li>
                                             <li class="list-group-item">
                                                 <ul class="list-inline socails">
-                                                        <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original ><span class="base-color"></span></span></i></a></li>
-                                                        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></i></a></li> 
+                                                        <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original"></i></a></li>
+                                                        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></a></li> 
                                                         <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled"></i></a></li>
                                                         <!-- <li class="list-inline-item"><a href="javascript:void(0);">
                                                             <i class="lni-github-original text-dark"></i></a></li> -->
