--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Sam</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying </span></p>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">air sea physics & remote sensing with a B.S. in Meteorology </span></p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami</span></p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">studying air sea physics & remote sensing with a B.S. in Meteorology </span></p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">with a B.S. in Meteorology </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
