--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                         <!-- Item 01 -->
                         <div class="col-lg-4 portfolio-item my-3 seo">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab1.jpeg" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
@@ -654,7 +654,7 @@
                         <!-- Item 02 -->
                         <div class="col-lg-4 portfolio-item my-3 graphic">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab2.JPG" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
