--- a/index.html
+++ b/index.html
@@ -639,12 +639,12 @@
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
-                                            <!--<button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                            <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
-                                            </button>-->
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            </button>
+                                           <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a> -->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -661,9 +661,9 @@
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!-- <a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a> -->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -673,7 +673,7 @@
                         <!-- Item 03 -->
                         <div class="col-lg-4 portfolio-item my-3 webdesign graphic">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab3.JPG" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
@@ -692,16 +692,16 @@
                         <!-- Item 04 -->
                         <div class="col-lg-4 portfolio-item my-3 webdesign">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab4.jpeg" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -711,16 +711,16 @@
                         <!-- Item 05 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\Lab5.JPG" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -730,16 +730,16 @@
                         <!-- Item 06 -->
                         <div class="col-lg-4 portfolio-item my-3 webdesign seo">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab8.jpg" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -749,16 +749,16 @@
                         <!-- Item 07 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\Lab9.jpg" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -768,16 +768,16 @@
                         <!-- Item 08 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\lab8.jpg" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -794,9 +794,9 @@
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <i class="lni-link"></i>
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <<!--a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a>-->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
