--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="Resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
                                             <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li>
-                                            <!--<li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
+                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
                                             <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>-->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
@@ -554,21 +554,26 @@
                             <li class="list-inline-item">
                                <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
                            </li>
+                           <li class="list-inline-item">
+                                <a href="#" data-filter=".webdesign" class="my-1">Dissertation</a>
+                            </li>
+                             <li class="list-inline-item">
                             <li class="list-inline-item">
+                           
                                 <a href="#" data-filter=".webdesign" class="my-1">Field Experiments</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#" data-filter=".mobiledesign" class="my-1">Internships</a>
                             </li>
                             <li class="list-inline-item">
-                               <a href="#" data-filter=".graphic" class="my-1">Programming</a>
+                               <a href="#" data-filter=".graphic" class="my-1">Conferences</a>
                            </li>
-                            <li class="list-inline-item">
+                            <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".seo" class="my-1">Social Media</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#" data-filter=".graphic" class="my-1">Side Projects</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="portfolio-items mt-4 row">
@@ -618,7 +623,7 @@
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
@@ -637,7 +642,7 @@
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
@@ -656,7 +661,7 @@
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
@@ -675,7 +680,7 @@
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
@@ -694,7 +699,7 @@
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
@@ -727,12 +732,12 @@
                         <!-- Item 09 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
                             <div class="portfolio-item-content rounded">
-                                <img src="http://placehold.it/600x450" alt="/">
+                                <img src="assets\img\IMG_4813.JPG" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <i class="lni-link"></i>
+                                                <!-- <i class="lni-link"></i> -->
                                             </button>
                                             <<!--a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
