--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                             </div>
                         </div>
                         <!-- Item 08 -->
-                        <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
+                        <!-- <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab8.jpg" alt="/">
                                 <div class="img-overlay text-center">
@@ -723,12 +723,12 @@
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
                                             </a>-->
-                                        </div>
+                                        <!--</div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Item 09 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
                             <div class="portfolio-item-content rounded">
