--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                             </div>
                         </div>
                         <!-- Item 04 -->
-                        <div class="col-lg-4 portfolio-item my-3 webdesign">
+                        <!-- <div class="col-lg-4 portfolio-item my-3 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab4.jpeg" alt="/">
                                 <div class="img-overlay text-center">
@@ -647,12 +647,12 @@
                                             <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
                                             </a>-->
-                                        </div>
+                                        <!--</div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Item 05 -->
                         <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
                             <div class="portfolio-item-content rounded">
@@ -730,7 +730,7 @@
                             </div>
                         </div> -->
                         <!-- Item 09 -->
-                        <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
+                       <!--- <div class="col-lg-4 portfolio-item my-3 mobiledesign webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\IMG_4813.JPG" alt="/">
                                 <div class="img-overlay text-center">
@@ -742,8 +742,8 @@
                                             <<!--a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
                                             </a>-->
-                                        </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                       <!-- </div>
+                                        <h5 class="text-white mt-3 mb-0">My Work</h5>-->
                                     </div>
                                 </div>
                             </div>
