--- a/index.html
+++ b/index.html
@@ -635,28 +635,9 @@
                             </div>
                         </div>
                         <!-- Item 04 -->
-                        <!-- <div class="col-lg-4 portfolio-item my-3 webdesign">
+                        <div class="col-lg-4 portfolio-item my-3 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab4.jpeg" alt="/">
-                                <div class="img-overlay text-center">
-                                    <div class="img-overlay-content">
-                                        <div class="portfolio-icon">
-                                            <button type="button" data-toggle="modal" data-target="#portfolio-single">
-                                                <!-- <i class="lni-link"></i> -->
-                                            </button>
-                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
-                                                <i class="lni-search"></i>
-                                            </a>-->
-                                        <!--</div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                        <!-- Item 05 -->
-                        <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
-                            <div class="portfolio-item-content rounded">
-                                <img src="assets\img\Lab5.JPG" alt="/">
                                 <div class="img-overlay text-center">
                                     <div class="img-overlay-content">
                                         <div class="portfolio-icon">
@@ -671,6 +652,25 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <!-- Item 05 -->
+                        <!-- <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
+                            <div class="portfolio-item-content rounded">
+                                <img src="assets\img\Lab5.JPG" alt="/">
+                                <div class="img-overlay text-center">
+                                    <div class="img-overlay-content">
+                                        <div class="portfolio-icon">
+                                            <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                <!-- <i class="lni-link"></i> -->
+                                            </button>
+                                            <!--<a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                <i class="lni-search"></i>
+                                            </a>-->
+                                       <!--- </div>
+                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                    </div>
+                                </div>
+                            </div> -->
                         </div>
                         <!-- Item 06 -->
                         <div class="col-lg-4 portfolio-item my-3 webdesign seo">
