--- a/index.html
+++ b/index.html
@@ -555,18 +555,18 @@
                                <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
                            </li>
                            <li class="list-inline-item">
-                                <a href="#" data-filter=".webdesign" class="my-1">Dissertation</a>
+                                <a href="#" data-filter=".diss" class="my-1">Dissertation</a>
                             </li>
                              <li class="list-inline-item">
                             <li class="list-inline-item">
                            
-                                <a href="#" data-filter=".webdesign" class="my-1">Field Experiments</a>
+                                <a href="#" data-filter=".field" class="my-1">Field Experiments</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#" data-filter=".mobiledesign" class="my-1">Internships</a>
+                                <a href="#" data-filter=".int" class="my-1">Internships</a>
                             </li>
                             <li class="list-inline-item">
-                               <a href="#" data-filter=".graphic" class="my-1">Conferences</a>
+                               <a href="#" data-filter=".conf" class="my-1">Conferences</a>
                            </li>
                             <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".seo" class="my-1">Social Media</a>
@@ -578,7 +578,7 @@
                     </div>
                     <div class="portfolio-items mt-4 row">
                         <!-- Item 01 -->
-                        <div class="col-lg-4 portfolio-item my-3 seo">
+                        <div class="col-lg-4 portfolio-item my-1 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab1.jpeg" alt="/">
                                 <div class="img-overlay text-center">
@@ -597,7 +597,7 @@
                             </div>
                         </div>
                         <!-- Item 02 -->
-                        <div class="col-lg-4 portfolio-item my-3 graphic">
+                        <div class="col-lg-4 portfolio-item my-1 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab2.JPG" alt="/">
                                 <div class="img-overlay text-center">
