--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                             </div>
                         </div>
                         <!-- Item 05 -->
-                        <div class="col-lg-4 portfolio-item my-3 mobiledesign seo">
+                        <div class="col-lg-4 portfolio-item my-3 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\Lab5.JPG" alt="/">
                                 <div class="img-overlay text-center">
@@ -692,7 +692,7 @@
                             </div>
                         </div>
                         <!-- Item 07 -->
-                        <div class="col-lg-4 portfolio-item my-3 mobiledesign">
+                        <div class="col-lg-4 portfolio-item my-3 webdesign">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\Lab9.jpg" alt="/">
                                 <div class="img-overlay text-center">
@@ -739,7 +739,7 @@
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <!-- <i class="lni-link"></i> -->
                                             </button>
-                                            <<!--a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!--a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
                                             </a>-->
                                        <!-- </div>
