--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                             </div>
                         </div>
                         <!-- Item 03 -->
-                        <div class="col-lg-4 portfolio-item my-3 webdesign graphic">
+                        <div class="col-lg-4 portfolio-item my-3 webdesign ">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab3.JPG" alt="/">
                                 <div class="img-overlay text-center">
@@ -625,9 +625,9 @@
                                             <button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                 <!-- <i class="lni-link"></i> -->
                                             </button>
-                                            <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                            <!-- <a href="http://placehold.it/600x450" class="js-zoom-gallery">
                                                 <i class="lni-search"></i>
-                                            </a>
+                                            </a> -->
                                         </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>
                                     </div>
@@ -673,7 +673,7 @@
                             </div>
                         </div>
                         <!-- Item 06 -->
-                        <div class="col-lg-4 portfolio-item my-3 webdesign seo">
+                        <div class="col-lg-4 portfolio-item my-3 webdesign ">
                             <div class="portfolio-item-content rounded">
                                 <img src="assets\img\lab8.jpg" alt="/">
                                 <div class="img-overlay text-center">
@@ -744,9 +744,9 @@
                                             </a>-->
                                        <!-- </div>
                                         <h5 class="text-white mt-3 mb-0">My Work</h5>-->
-                                    </div>
+                                  <!--   </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
