--- a/index.html
+++ b/index.html
@@ -568,6 +568,9 @@
                             <li class="list-inline-item">
                                <a href="#" data-filter=".conf" class="my-1">Conferences</a>
                            </li>
+                           <li class="list-inline-item">
+                                <a href="#" data-filter=".pub" class="my-1">Publications</a>
+                            </li>
                             <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".seo" class="my-1">Social Media</a>
                             </li>
