--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                                                 <i class="lni-search"></i>
                                             </a> -->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Satellites/Remote Sensing</h5>
                                     </div>
                                 </div>
                             </div>
@@ -613,7 +613,7 @@
                                                 <i class="lni-search"></i>
                                             </a> -->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Wave Tank</h5>
                                     </div>
                                 </div>
                             </div>
@@ -632,7 +632,7 @@
                                                 <i class="lni-search"></i>
                                             </a> -->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Research Cruises/Field Work</h5>
                                     </div>
                                 </div>
                             </div>
@@ -651,7 +651,7 @@
                                                 <i class="lni-search"></i>
                                             </a>-->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Rosenstiel School of Marine and Atmospheric Sciences (RSMAS) at University of Miami</h5>
                                     </div>
                                 </div>
                             </div>
@@ -672,7 +672,7 @@
                                                 <i class="lni-search"></i>
                                             </a>-->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Center for Southeastern Tropical Remote Sensing (CSTARS)</h5>
                                     </div>
                                 </div>
                             </div>
@@ -691,7 +691,7 @@
                                                 <i class="lni-search"></i>
                                             </a>-->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">My Work</h5>
+                                        <h5 class="text-white mt-3 mb-0">Computer Programming</h5>
                                     </div>
                                 </div>
                             </div>
