--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                              <li class="list-inline-item">
                             <li class="list-inline-item">
                            
-                                <a href="#" data-filter=".field" class="my-1">Field Experiments</a>
+                                <a href="#" data-filter=".field" class="my-1">Cruises/Field Experiments</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#" data-filter=".int" class="my-1">Internships</a>
@@ -594,7 +594,7 @@
                                                 <i class="lni-search"></i>
                                             </a> -->
                                         </div>
-                                        <h5 class="text-white mt-3 mb-0">Satellites/Remote Sensing</h5>
+                                        <h5 class="text-white mt-3 mb-0">Instrumentation/Remote Sensing</h5>
                                     </div>
                                 </div>
                             </div>
