--- a/index.html
+++ b/index.html
@@ -812,7 +812,8 @@
                                                             </div>
                                                         </div>
 
-                        </div><div class="col-lg-4 portfolio-item my-1 conf">
+                                    </div>
+                                    <div class="col-lg-4 portfolio-item my-1 conf">
                                     <div class="portfolio-item-content rounded">
                                         <img src="assets\img\conf8.JPG" alt="/">
                                         <div class="img-overlay text-center">
