--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
                     <div class="row mt-4">
                         <!--   Portfolio Filters   -->
                         <ul id="portfolio-filter" class="list-unstyled list-inline mb-0 col-lg-12 text-left portfolio-filter">
-                            <!-- <li class="list-inline-item">
+                            <li class="list-inline-item">
                                 <a href="#" data-filter="*" class="active my-1">All</a>
-                            </li> -->
+                            </li> 
                             <li class="list-inline-item">
                                <a href="#" data-filter=".webdesign" class="my-1">Lab</a>
                            </li>
