--- a/index.html
+++ b/index.html
@@ -867,6 +867,79 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="col-lg-4 portfolio-item my-3 int">
+                                    <div class="portfolio-item-content rounded">
+                                        <img src="assets\img\int0.JPG" alt="/">
+                                        <div class="img-overlay text-center">
+                                            <div class="img-overlay-content">
+                                                <div class="portfolio-icon">
+                                                    <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                        <!-- <i class="lni-link"></i> -->
+                                                    </button>
+                                                    <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                    <i class="lni-search"></i>
+                                                                                                                                </a> -->
+                                                </div>
+                                                <h5 class="text-white mt-3 mb-0"></h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 portfolio-item my-3 int">
+                                        <div class="portfolio-item-content rounded">
+                                            <img src="assets\img\int1.jpg" alt="/">
+                                            <div class="img-overlay text-center">
+                                                <div class="img-overlay-content">
+                                                    <div class="portfolio-icon">
+                                                        <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                            <!-- <i class="lni-link"></i> -->
+                                                        </button>
+                                                        <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                        <i class="lni-search"></i>
+                                                                                                                                    </a> -->
+                                                    </div>
+                                                    <h5 class="text-white mt-3 mb-0"></h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 portfolio-item my-3 int">
+                                            <div class="portfolio-item-content rounded">
+                                                <img src="assets\img\int2.jpg" alt="/">
+                                                <div class="img-overlay text-center">
+                                                    <div class="img-overlay-content">
+                                                        <div class="portfolio-icon">
+                                                            <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                <!-- <i class="lni-link"></i> -->
+                                                            </button>
+                                                            <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                            <i class="lni-search"></i>
+                                                                                                                                        </a> -->
+                                                        </div>
+                                                        <h5 class="text-white mt-3 mb-0"></h5>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 portfolio-item my-3 int">
+                                                <div class="portfolio-item-content rounded">
+                                                    <img src="assets\img\int3.jpg" alt="/">
+                                                    <div class="img-overlay text-center">
+                                                        <div class="img-overlay-content">
+                                                            <div class="portfolio-icon">
+                                                                <button type="button" data-toggle="modal" data-target="#portfolio-single">
+                                                                    <!-- <i class="lni-link"></i> -->
+                                                                </button>
+                                                                <!--  <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                                                                                                                <i class="lni-search"></i>
+                                                                                                                                            </a> -->
+                                                            </div>
+                                                            <h5 class="text-white mt-3 mb-0"></h5>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                     </div>
                 </div>
             </div>
