--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
                             <li class="list-inline-item">
                                <a href="#" data-filter=".diss" class="my-1">Dissertation</a>
                            </li>
-                           <li class="list-inline-item">
+                          <!--  <li class="list-inline-item">
                                 <a href="#" data-filter=".pub" class="my-1">Publications</a>
-                            </li>
+                            </li> -->
                             <!-- <li class="list-inline-item">
                                 <a href="#" data-filter=".seo" class="my-1">Social Media</a>
                             </li>
