--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                             <li data-menuanchor="Resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
                                             <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li>
                                             <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>-->
+                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>-->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
