--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
                                  <li class="list-inline-item"><a href="https://paypal.me/airseasam?locale.x=en_US"><i class="lni lni-paypal text-dark"></i></i></a></li>               
                                  <!-- <li class="list-inline-item"><a href="https://www.tiktok.com/@air.sea.sam"><i class="lni-tiktok-original text-dark"></i></a></li> -->
                              </ul>
-                             <p class="pl-3 text-dark"><span class="base-color">Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina</span></a></p>
+                             <p class="pl-3 text-dark"><span class="base-color">Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina and heavily edited by Samantha </span></a></p>
                          </div>
                      </div>
                  </div>
