--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                             <li data-menuanchor="about" class="list-group-item"><a href="#about">About me</a></li>
                                             <li data-menuanchor="Resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
                                             <li data-menuanchor="Research" class="list-group-item"><a href="#Research">Research</a></li>
-                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>
+                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Blog</a></li>
+                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li>-->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
@@ -540,7 +540,7 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="text-left">
-                                <h2 class="text-dark"> <span class="base-color">Portfolio</span></h2>
+                                <h2 class="text-dark"> <span class="base-color">Portfolio Blog</span></h2>
                                 <p class="text-muted mx-auto section-subtitle mt-3"></p>
                             </div>
                         </div>
