--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="title-small">
-                            <p class="text-dark mb-2"><span class="base-color">Portfolio</span></p>
+                            <p class="text-dark mb-2"><span class="base-color">Blog</span></p>
                         </div>
                         <div class="col-lg-12">
                             <div class="text-left">
